LAB3/ExE.cpp.g++log.txt
C:\Prog\Edu\ProgCPP2sem\LAB3\ExE.cpp: In function 'int main()':
C:\Prog\Edu\ProgCPP2sem\LAB3\ExE.cpp:12:41: error: 'do_some_awesome_work' was not declared in this scope
     cout << do_some_awesome_work (&A, &B);
                                         ^
 
"iconv.exe" не является внутренней или внешней
командой, исполняемой программой или пакетным файлом.
